<resources>
    <string name="app_name">Tiffin Management</string>
    <string name="dashboard">Dashboard</string>
    <string name="main_item">Main Item</string>
    <string name="no_account_register">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="your_first_name">Your First Name</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="username_or_email">UserName/Email</string>
    <string name="offers">Offers</string>
    <string name="lunchbox">LunchBox</string>
    <string name="near_me">Near me</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="tiffin_center_name">Tiffin Center Name</string>
    <string name="view_menu">View Menu</string>
    <string name="cuisines">Cuisines</string>
</resources>