<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_login_register"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:contentDescription="@string/profile_icon" />
    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_first_name"
        android:inputType="textPersonName"
        android:layout_marginBottom="8dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:importantForAutofill="no"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corners"
        android:padding="18dp"
        />
    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_last_name"
        android:inputType="textPersonName"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:importantForAutofill="no"
        android:background="@drawable/rounded_corners"
        android:padding="18dp"
        />
    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:importantForAutofill="no"
        android:background="@drawable/rounded_corners"
        android:padding="18dp"
        />
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:importantForAutofill="no"
        android:background="@drawable/rounded_corners"
        android:padding="18dp"
        />
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:importantForAutofill="no"
        android:background="@drawable/rounded_corners"
        android:padding="18dp"
        />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/register"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textColor="#000000" />
</LinearLayout>
